// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebView renders a web view when a url is provided 1`] = `
<View
  style={
    {
      "flex": 1,
      "height": "100%",
      "minHeight": 300,
    }
  }
  testID="webview-test"
>
  <View
    style={
      [
        {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      allowFileAccess={false}
      allowsFullscreenVideo={false}
      androidHardwareAccelerationDisabled={false}
      androidLayerType="none"
      cacheEnabled={true}
      javaScriptEnabled={true}
      messagingEnabled={true}
      messagingModuleName="WebViewMessageHandler1"
      nestedScrollEnabled={false}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onRenderProcessGone={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      overScrollMode="always"
      saveFormDataDisabled={false}
      scalesPageToFit={true}
      setBuiltInZoomControls={true}
      setDisplayZoomControls={false}
      setSupportMultipleWindows={true}
      source={
        {
          "method": "GET",
          "uri": "https://mendix.com",
        }
      }
      style={
        [
          {
            "flex": 1,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#ffffff",
          },
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      thirdPartyCookiesEnabled={true}
      userAgent=""
    />
  </View>
</View>
`;

exports[`WebView renders a web view when a url with POST method and body is provided 1`] = `
<View
  style={
    {
      "flex": 1,
      "height": "100%",
      "minHeight": 300,
    }
  }
  testID="webview-test"
>
  <View
    style={
      [
        {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      allowFileAccess={false}
      allowsFullscreenVideo={false}
      androidHardwareAccelerationDisabled={false}
      androidLayerType="none"
      cacheEnabled={true}
      javaScriptEnabled={true}
      messagingEnabled={true}
      messagingModuleName="WebViewMessageHandler2"
      nestedScrollEnabled={false}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onRenderProcessGone={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      overScrollMode="always"
      saveFormDataDisabled={false}
      scalesPageToFit={true}
      setBuiltInZoomControls={true}
      setDisplayZoomControls={false}
      setSupportMultipleWindows={true}
      source={
        {
          "body": "{ testKey: "testValue" }",
          "method": "POST",
          "uri": "https://mendix.com",
        }
      }
      style={
        [
          {
            "flex": 1,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#ffffff",
          },
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      thirdPartyCookiesEnabled={true}
      userAgent=""
    />
  </View>
</View>
`;

exports[`WebView renders a web view when a url with headers is provided 1`] = `
<View
  style={
    {
      "flex": 1,
      "height": "100%",
      "minHeight": 300,
    }
  }
  testID="webview-test"
>
  <View
    style={
      [
        {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      allowFileAccess={false}
      allowsFullscreenVideo={false}
      androidHardwareAccelerationDisabled={false}
      androidLayerType="none"
      cacheEnabled={true}
      javaScriptEnabled={true}
      messagingEnabled={true}
      messagingModuleName="WebViewMessageHandler3"
      nestedScrollEnabled={false}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onRenderProcessGone={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      overScrollMode="always"
      saveFormDataDisabled={false}
      scalesPageToFit={true}
      setBuiltInZoomControls={true}
      setDisplayZoomControls={false}
      setSupportMultipleWindows={true}
      source={
        {
          "headers": {
            "testName1": "testValue1",
            "testName2": "testValue2",
          },
          "method": "GET",
          "uri": "https://mendix.com",
        }
      }
      style={
        [
          {
            "flex": 1,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#ffffff",
          },
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      thirdPartyCookiesEnabled={true}
      userAgent=""
    />
  </View>
</View>
`;

exports[`WebView renders a web view when html content is provided 1`] = `
<View
  style={
    {
      "flex": 1,
      "height": "100%",
      "minHeight": 300,
    }
  }
  testID="webview-test"
>
  <View
    style={
      [
        {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      allowFileAccess={false}
      allowsFullscreenVideo={false}
      androidHardwareAccelerationDisabled={false}
      androidLayerType="none"
      cacheEnabled={true}
      javaScriptEnabled={true}
      messagingEnabled={true}
      messagingModuleName="WebViewMessageHandler4"
      nestedScrollEnabled={false}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onRenderProcessGone={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      overScrollMode="always"
      saveFormDataDisabled={false}
      scalesPageToFit={true}
      setBuiltInZoomControls={true}
      setDisplayZoomControls={false}
      setSupportMultipleWindows={true}
      source={
        {
          "html": "Hello, world!",
        }
      }
      style={
        [
          {
            "flex": 1,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#ffffff",
          },
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      thirdPartyCookiesEnabled={true}
      userAgent=""
    />
  </View>
</View>
`;

exports[`WebView renders an error when no url or content is provided 1`] = `
<View
  style={{}}
  testID="webview-test"
>
  <Text
    style={
      {
        "color": "red",
        "fontWeight": "bold",
      }
    }
  >
    No URL or content was provided.
  </Text>
</View>
`;
